ipc/ipdl/test/ipdl/error/Nullable.ipdl
//error: `nullable' qualifier for type `int' is unsupported

protocol PNullable {
child:
    async Msg(nullable int i);
};
